@@ -40,15 +40,11 @@ PNGLIB = -lpng
 ZLIBLIB = -lz
 
 X_LIBS = @X_LIBS@
-X_EXTRA_LIBS = @X_EXTRA_LIBS@
 GUILIBS = @GUILIBS@
 
 APPEXE = $(APPLICATION)@EXESUFFIX@
 
-#LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
-LDFLAGS = -L$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
-LINK = $(bindir)/libtool --mode link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
-#LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
+LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS) # @EXTRALDFLAGS@ 
 
 SYSLIBS = $(BLTLIB) $(TKLIB) $(TCLLIB) $(PNGLIB) $(ZLIBLIB) $(FFILIB) $(GUILIBS) -lm
 
@@ -81,7 +77,7 @@ install-data:
         fi
 
 $(APPEXE): $(OBJECTS)
-	$(LINK) $(OBJECTS) $(APPLIBS) $(SWARMLIBS) $(SYSLIBS) $(LIBS)
+	$(bindir)/libtool --mode link $(CC) $(CFLAGS) $(LDFLAGS) -o $@ $(OBJECTS) $(APPLIBS) $(SWARMLIBS) $(SYSLIBS) $(LIBS)
 
 .SUFFIXES: .m .xm
 
